[package]

name = "dynamin"
version = "0.0.1"
authors = ["Jordan Miner <jminer7@gmail.com>"]
description = "Dynamin is a GUI library."
keywords = ["gui"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
#event-loop = "*"
#zaffre = "*"
event-loop = { path = "../event-loop" }
smallvec = "0.6"
zaffre = { path = "../zaffre" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "windef", "winuser"] }
#winapi = { path = "../winapi-rs" }
