[package]

name = "dynamin"
version = "0.0.1"
authors = ["Jordan Miner <jminer7@gmail.com>"]
description = "Dynamin is a GUI library."
keywords = ["gui"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
#event-loop = "*"
#zaffre = "*"
event-loop = { path = "../event-loop" }
smallvec = "0.6"
zaffre = { path = "../zaffre" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "windef", "winuser"] }
#winapi = { path = "../winapi-rs" }

[target.'cfg(unix)'.dependencies]
gtk-sys = { version = "0.10.0", features = ["dox"] }
glib-sys = { version = "0.10.1", features = ["dox"] }
cairo-sys-rs = { version = "0.10.0", features = ["dox"] }
gobject-sys = { version = "0.10.0", features = ["dox"] }
pango-sys = { version = "0.10.0", features = ["dox"] }
atk-sys = { version = "0.10.0", features = ["dox"] }
gio-sys = { version = "0.10.0", features = ["dox"] }
gdk-pixbuf-sys = { version = "0.10.0", features = ["dox"] }
gdk-sys = { version = "0.10.0", features = ["dox"] }
